--- a/public/SAP-Customer.html
+++ b/public/SAP-Customer.html
@@ -129,7 +129,7 @@
 
     <script>
         // Configuration de base
-        const API_BASE_URL = 'https://logisticstraining.vercel.app';
+        const API_BASE_URL = 'https://sap-project-nine.vercel.app';
         
         // Éléments du DOM
         const uploadForm = document.getElementById('uploadForm');
