--- a/public/index.html
+++ b/public/index.html
@@ -325,194 +325,166 @@
         .success { background-color: #d4edda; color: #155724; }
 
         @media (max-width: 768px) {
-            .container { padding: 1rem; margin: 1rem; }
-            .file-item { flex-direction: column; align-items: flex-start; gap: 1rem; }
-            .file-actions { align-self: flex-end; }
+            .container {
+                padding: 1.5rem;
+            }
         }
-
-        /* Animation for file upload */
-        @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.05); }
-            100% { transform: scale(1); }
-        }
-
-        .pulse { animation: pulse 1.5s infinite; }
     </style>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1><i class="fas fa-file-upload"></i> SAP - Gestion des Documents</h1>
-            <p class="subtitle">Téléchargez et gérez vos documents clients</p>
-        </header>
 
-        <div class="upload-section">
-            <h2><i class="fas fa-cloud-upload-alt"></i> Téléverser un document</h2>
-            <form id="uploadForm">
-                <div class="file-upload">
-                    <input type="file" id="fileInput" accept=".pdf,.doc,.docx,.xls,.xlsx,.jpg,.jpeg,.png,.gif,.mp4,.mov" required>
-                    <label for="fileInput" class="file-upload-label">
-                        <i class="fas fa-file-alt"></i>
-                        <p>Glissez-déposez vos fichiers ici ou cliquez pour parcourir</p>
-                        <small>Formats supportés: PDF, Word, Excel, Images, Vidéos</small>
-                    </label>
-                    <div class="selected-file" id="selectedFile">
-                        <i class="fas fa-file"></i>
-                        <span id="fileName"></span>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-upload pulse"><i class="fas fa-upload"></i> Téléverser</button>
-            </form>
-            <div id="uploadStatus" class="status">
-                <i class="fas fa-circle-notch fa-spin"></i>
-                <span id="statusMessage"></span>
-            </div>
+<div class="container">
+    <header>
+        <h1>Gestion des Documents Clients</h1>
+        <p class="subtitle">Upload et gestion des documents associés à chaque client</p>
+    </header>
+
+    <div class="upload-section">
+        <h2><i class="fas fa-cloud-upload-alt"></i> Télécharger un Document</h2>
+        <div class="file-upload">
+            <label class="file-upload-label" for="fileInput">
+                <i class="fas fa-upload"></i>
+                <p>Sélectionner ou glisser-déposer un fichier</p>
+                <small>Les formats pris en charge: PDF, DOCX, XLSX, JPG, PNG</small>
+            </label>
+            <input type="file" id="fileInput">
         </div>
+        <button id="uploadBtn" class="btn btn-upload"><i class="fas fa-arrow-up"></i> Upload</button>
+        <div class="selected-file" id="selectedFile">
+            <i class="fas fa-file-alt"></i>
+            <span id="fileName"></span>
+        </div>
+    </div>
 
-        <div class="file-list">
-            <div class="file-list-header">
-                <h2><i class="fas fa-folder-open"></i> Documents téléversés</h2>
-                <button class="refresh-btn" id="refreshBtn"><i class="fas fa-sync-alt"></i></button>
-            </div>
-            <div class="file-list-content">
-                <ul id="fileList">
-                    <li class="empty-state">
-                        <i class="fas fa-folder-open"></i>
-                        <p>Aucun document téléversé</p>
-                    </li>
-                </ul>
+    <div class="file-list">
+        <div class="file-list-header">
+            <h2><i class="fas fa-folder-open"></i> Liste des Documents</h2>
+            <button id="refreshBtn" class="refresh-btn"><i class="fas fa-sync"></i> Rafraîchir</button>
+        </div>
+        <div class="file-list-content" id="fileListContent">
+            <div class="empty-state">
+                <i class="fas fa-folder-open"></i>
+                <p>Aucun fichier n'a été téléchargé. Cliquez sur le bouton "Télécharger un Document" pour commencer.</p>
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script>
-        // DOM Elements
-        const uploadForm    = document.getElementById('uploadForm');
-        const fileInput     = document.getElementById('fileInput');
-        const fileList      = document.getElementById('fileList');
-        const uploadStatus  = document.getElementById('uploadStatus');
-        const statusMessage = document.getElementById('statusMessage');
-        const selectedFile  = document.getElementById('selectedFile');
-        const fileName      = document.getElementById('fileName');
-        const refreshBtn    = document.getElementById('refreshBtn');
+    <div class="status" id="status"></div>
+</div>
 
-        // Show selected file
-        fileInput.addEventListener('change', () => {
-            if (fileInput.files.length) {
-                selectedFile.style.display = 'flex';
-                fileName.textContent = fileInput.files[0].name;
-            } else {
-                selectedFile.style.display = 'none';
-            }
-        });
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.5.0/axios.min.js"></script>
+<script>
+    const uploadURL = 'https://sap-project-production.up.railway.app/api/upload';
+    const filesURL = 'https://sap-project-production.up.railway.app/api/files';
 
-        // Handle upload form submit
-        uploadForm.addEventListener('submit', async e => {
-            e.preventDefault();
-            await uploadToCloudinary();
-        });
+    const uploadBtn = document.getElementById('uploadBtn');
+    const refreshBtn = document.getElementById('refreshBtn');
+    const fileInput = document.getElementById('fileInput');
+    const selectedFile = document.getElementById('selectedFile');
+    const fileName = document.getElementById('fileName');
+    const status = document.getElementById('status');
+    const fileListContent = document.getElementById('fileListContent');
 
-        // Refresh file list
-        refreshBtn.addEventListener('click', loadFilesFromCloudinary);
+    let file = null;
 
-        // Upload via your Express API
-        async function uploadToCloudinary() {
-            const file = fileInput.files[0];
-            if (!file) return showStatus('Veuillez sélectionner un fichier','error');
+    fileInput.addEventListener('change', () => {
+        const selected = fileInput.files[0];
+        if (selected) {
+            file = selected;
+            selectedFile.style.display = 'flex';
+            fileName.textContent = file.name;
+        }
+    });
 
-            const formData = new FormData();
-            formData.append('file', file);
-
-            try {
-                showStatus('Téléversement en cours…','loading');
-                const res = await axios.post('/api/upload', formData, {
-                    headers: { 'Content-Type': 'multipart/form-data' }
-                });
-                showStatus('Téléversement réussi!','success');
-                fileInput.value = '';
-                selectedFile.style.display = 'none';
-                await loadFilesFromCloudinary();
-            } catch (e) {
-                showStatus(`Erreur: ${e.message}`,'error');
-            }
+    uploadBtn.addEventListener('click', async () => {
+        if (!file) {
+            alert('Veuillez sélectionner un fichier à télécharger.');
+            return;
         }
 
-        // Load list from your API
-        async function loadFilesFromCloudinary() {
-            fileList.innerHTML = `<li class="empty-state"><i class="fas fa-circle-notch fa-spin"></i><p>Chargement des documents...</p></li>`;
-            try {
-                const response = await axios.get('/api/files');
-                const files = response.data.files;
-                if (files.length) {
-                    fileList.innerHTML = '';
-                    files.forEach(file => {
-                        const ext = file.url.split('.').pop().toLowerCase();
-                        let iconClass = 'fas fa-file', iconBg = 'default-icon';
-                        if (ext === 'pdf') { iconClass='fas fa-file-pdf'; iconBg='pdf-icon'; }
-                        else if (['doc','docx'].includes(ext)) { iconClass='fas fa-file-word'; iconBg='doc-icon'; }
-                        else if (['xls','xlsx'].includes(ext)) { iconClass='fas fa-file-excel'; iconBg='xls-icon'; }
-                        else if (['jpg','jpeg','png','gif'].includes(ext)) { iconClass='fas fa-file-image'; iconBg='img-icon'; }
-                        else if (['mp4','mov'].includes(ext)) { iconClass='fas fa-file-video'; iconBg='vid-icon'; }
+        const formData = new FormData();
+        formData.append('file', file);
 
-                        const li = document.createElement('li');
-                        li.className = 'file-item';
-                        li.innerHTML = `
-                            <div class="file-info">
-                                <div class="file-icon ${iconBg}"><i class="${iconClass}"></i></div>
-                                <div class="file-details">
-                                    <div class="file-name" title="${file.name}">${file.name}</div>
-                                    <div class="file-meta">
-                                        <span><i class="fas fa-calendar-alt"></i> ${new Date().toLocaleDateString()}</span>
-                                        <span><i class="fas fa-file"></i> ${ext.toUpperCase()}</span>
-                                        <span><i class="fas fa-database"></i> --</span>
-                                    </div>
+        try {
+            status.classList.remove('error', 'success', 'loading');
+            status.classList.add('loading');
+            status.textContent = 'Chargement en cours...';
+            status.classList.add('show');
+
+            await axios.post(uploadURL, formData, {
+                headers: { 'Content-Type': 'multipart/form-data' }
+            });
+
+            status.classList.remove('loading');
+            status.classList.add('success');
+            status.textContent = 'Téléchargement réussi!';
+            refreshFileList();
+        } catch (error) {
+            status.classList.remove('loading');
+            status.classList.add('error');
+            status.textContent = 'Erreur lors du téléchargement.';
+        }
+    });
+
+    refreshBtn.addEventListener('click', refreshFileList);
+
+    async function refreshFileList() {
+        try {
+            const { data } = await axios.get(filesURL);
+            fileListContent.innerHTML = '';
+
+            if (data.length === 0) {
+                fileListContent.innerHTML = `
+                    <div class="empty-state">
+                        <i class="fas fa-folder-open"></i>
+                        <p>Aucun fichier n'a été téléchargé.</p>
+                    </div>
+                `;
+            } else {
+                data.forEach(file => {
+                    const fileItem = document.createElement('div');
+                    fileItem.classList.add('file-item');
+
+                    fileItem.innerHTML = `
+                        <div class="file-info">
+                            <div class="file-icon ${getFileIcon(file.name)}">
+                                <i class="fas fa-file-alt"></i>
+                            </div>
+                            <div class="file-details">
+                                <div class="file-name">${file.name}</div>
+                                <div class="file-meta">
+                                    <span>${file.size}</span>
                                 </div>
                             </div>
-                            <div class="file-actions">
-                                <a href="${file.url}" target="_blank" class="action-btn download-btn" title="Télécharger"><i class="fas fa-download"></i></a>
-                                <button onclick="deleteFromCloudinary('${file.public_id}')" class="action-btn delete-btn" title="Supprimer"><i class="fas fa-trash"></i></button>
-                            </div>
-                        `;
-                        fileList.appendChild(li);
-                    });
-                } else {
-                    fileList.innerHTML = `<li class="empty-state"><i class="fas fa-folder-open"></i><p>Aucun document téléversé</p></li>`;
-                }
-            } catch (e) {
-                fileList.innerHTML = `<li class="empty-state"><i class="fas fa-exclamation-triangle"></i><p>Erreur de chargement des documents</p></li>`;
-                console.error(e);
+                        </div>
+                        <div class="file-actions">
+                            <button class="action-btn download-btn"><i class="fas fa-download"></i></button>
+                            <button class="action-btn delete-btn"><i class="fas fa-trash"></i></button>
+                        </div>
+                    `;
+                    fileListContent.appendChild(fileItem);
+                });
             }
+        } catch (error) {
+            console.error('Error fetching file list:', error);
         }
+    }
 
-        // Delete via your Express API
-        async function deleteFromCloudinary(public_id) {
-            if (!confirm('Voulez-vous vraiment supprimer ce document ?')) return;
-            try {
-                showStatus('Suppression en cours…','loading');
-                await axios.delete(`/api/delete/${public_id}`);
-                showStatus('Document supprimé avec succès','success');
-                await loadFilesFromCloudinary();
-            } catch (e) {
-                showStatus(`Erreur: ${e.message}`,'error');
-                console.error(e);
-            }
+    function getFileIcon(fileName) {
+        const ext = fileName.split('.').pop();
+        switch (ext) {
+            case 'pdf': return 'pdf-icon';
+            case 'docx': return 'doc-icon';
+            case 'xlsx': return 'xls-icon';
+            case 'jpg': case 'png': return 'img-icon';
+            case 'mp4': return 'vid-icon';
+            default: return '';
         }
+    }
 
-        // Show status
-        function showStatus(message, type) {
-            statusMessage.textContent = message;
-            uploadStatus.className = `status show ${type}`;
-            const icon = uploadStatus.querySelector('i');
-            if (type==='loading') icon.className='fas fa-circle-notch fa-spin';
-            else if (type==='error') icon.className='fas fa-exclamation-circle';
-            else icon.className='fas fa-check-circle';
-            setTimeout(() => uploadStatus.classList.remove('show'), 5000);
-        }
+    // Initial load of file list
+    refreshFileList();
+</script>
 
-        // Initial load
-        document.addEventListener('DOMContentLoaded', loadFilesFromCloudinary);
-    </script>
 </body>
 </html>
